objects/AR_SFObj1__c.object
<CustomObject>
    <description>Add Comment for this Object ARSFObj1111112344</description>
    <fields>
        <fullName>ARField9__c</fullName>
        <label>ARField9</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ARSFField4__c</fullName>
        <label>ARSFField4</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AR_SFFeid3__c</fullName>
        <label>AR-SFFeid3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AR_SFField1__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Add Desc AR-SFField1</description>
        <label>AR-SFField1</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AR_SFField2__c</fullName>
        <description>Add  Desc</description>
        <label>AR-SFField2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f3__c</fullName>
        <description>1234534</description>
        <label>f3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>AR-SFObj1</label>
    <nameField>
        <label>AR-SFObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARSFObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ARSFvalidationRule1</fullName>
        <active>true</active>
        <description>Add comment for this Validation.</description>
        <errorConditionFormula>ISBLANK( AR_SFField1__c )</errorConditionFormula>
        <errorMessage>Please enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ARSVdrule2</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(    ARSFField4__c )</errorConditionFormula>
        <errorMessage>Please  enter a value</errorMessage>
    </validationRules>
</CustomObject>